--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -65,7 +65,7 @@
 
 		<div class="content-item mb-3" *ngIf="_result.playedToday.length != 0">
 			<div class="row">
-				<div class="col-12 col-md-9 col-lg-12 col-xl-9 col-xxl-8">
+				<div class="col-12">
 					<h3>
 						Don't miss out
 						<fa-icon [icon]="iconDice"></fa-icon>
