--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@
 }
 
 body {
-	background-color: #333;
+	background-color: rgba(0,0,0,.85);
 	font-size: 1rem;
 	font-family: 'Alegreya-sans', sans-serif;
 }
@@ -48,6 +48,10 @@ hr {
 
 .text-success {
 	color: rgb(0, 170, 50) !important;
+}
+
+.bg-dark {
+	background-color: rgba(0,0,0,.5) !important;
 }
 
 .flexible-text-color {
@@ -193,7 +197,7 @@ tr {
 
 	.content {
 		.content-item {
-			background-color: rgba(0, 0, 0, .25);
+			background-color: rgba(0, 0, 0, .5);
 			border: 2px solid #000;
 			color: var(--white);
 
