--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@
 }
 
 body {
-	background-color: rgba(0,0,0,.85);
+	background-color: rgba(0, 0, 0, .8);
 	font-size: 1rem;
 	font-family: 'Alegreya-sans', sans-serif;
 }
@@ -51,7 +51,7 @@ hr {
 }
 
 .bg-dark {
-	background-color: rgba(0,0,0,.5) !important;
+	background-color: rgba(0, 0, 0, .35) !important;
 }
 
 .flexible-text-color {
@@ -197,7 +197,7 @@ tr {
 
 	.content {
 		.content-item {
-			background-color: rgba(0, 0, 0, .5);
+			background-color: rgba(0, 0, 0, .35);
 			border: 2px solid #000;
 			color: var(--white);
 
