--- a/src/app/page/user/user-profile/user-profile.component.scss
+++ b/src/app/page/user/user-profile/user-profile.component.scss
@@ -18,15 +18,6 @@
     rotate: -180deg;
 }
 
-#amountOfShownRecords {
-    width: 4.25rem;
-    margin-bottom: .5rem;
-
-    ::ng-deep input {
-        padding: 0 .75rem;
-    }
-}
-
 .filter-item {
     border: 1px solid;
     border-radius: 5px;
@@ -70,4 +61,9 @@
     &.active {
         opacity: 100%;
     }
+}
+
+#timeline {
+    height: 400px;
+    color: #000;
 }
