--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
       <div class="navbar-brand">
         Cash tracker
-        <span class="fs-6" id="current-patch">24.9.23</span>
+        <span class="fs-6" id="current-patch">25.9.23</span>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,12 +32,12 @@
               <fa-icon [icon]="iconProfile"></fa-icon> Profile
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" aria-current="page" target="_blank"
               href="http://dashboard.robalma.nl:3000/d/f13c658f-bfca-457e-bfbc-9dcd01947725/dashboard?orgId=1&refresh=1m&kiosk">
               <fa-icon [icon]="iconChart"></fa-icon> Dashboard
             </a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLink="manage">
               <fa-icon [icon]="iconEdit"></fa-icon> Manage
