--- a/src/app/page/record/record-create/record-create.component.html
+++ b/src/app/page/record/record-create/record-create.component.html
@@ -1,11 +1,11 @@
-<!-- <div class="row content-item mb-3">
+<!-- <div class="row content-item">
 	<div class="col-12">
 		<h3>What's new in this patch?</h3>
 		<p class="mb-0">You can now see casino net on profile page!</p>
 	</div>
 </div> -->
 
-<div class="row content-item mb-3">
+<div class="row content-item">
 	<div class="col-12">
 		<h3>New record</h3>
 	</div>
