--- a/src/app/page/record/record-shared/record-shared.component.html
+++ b/src/app/page/record/record-shared/record-shared.component.html
@@ -1,13 +1,12 @@
 <!-- Stats by period -->
 
-<div class="content-item mb-3 pb-2">
+<div class="content-item pb-2">
 	<div class="row">
 		<div class="col-12 mb-1">
 			<!-- Choose period -->
 			<ng-container *ngFor="let period of _result.availablePeriods">
 				<h6 class="d-inline-block me-3" (click)="_localstorage.setSharedResultPeriod(period)"
-					[ngClass]="_localstorage.getSharedResultPeriod() == period ? 'text-decoration-underline' : ''"
-					role="button">
+					[ngClass]="_localstorage.getSharedResultPeriod() == period ? 'text-decoration-underline' : ''" role="button">
 					<fa-icon class="fs-6" [icon]="iconCarrot"></fa-icon>
 					{{ period | titlecase }}
 				</h6>
@@ -58,8 +57,7 @@
 
 					<h4 class="d-inline-block float-end online-status">
 						<fa-icon [icon]="iconOnlineStatus" class="fs-6"
-							*ngIf="_user.getPingByUser(result[0]) >= 0 && _user.getPingByUser(result[0]) <= 600"
-							[ngClass]="{
+							*ngIf="_user.getPingByUser(result[0]) >= 0 && _user.getPingByUser(result[0]) <= 600" [ngClass]="{
 								'text-success' : _user.getPingByUser(result[0]) >= 0 && _user.getPingByUser(result[0]) <= 60,
 								'text-warning' : _user.getPingByUser(result[0]) > 60 && _user.getPingByUser(result[0]) <= 600}"></fa-icon>
 						<fa-icon [icon]="iconOfflineStatus" class="fs-6 opacity-50"
@@ -81,8 +79,7 @@
 						<ng-container *ngIf="!_user.getPingDetailByUser(result[0])">
 							<span *ngIf="_user.getPingByUser(result[0]) / 60 / 60 / 24 >= 1">
 								{{ math.floor(_user.getPingByUser(result[0]) / 60 / 60 / 24) | number: '1.0-0' }}
-								day<ng-container
-									*ngIf="_user.getPingByUser(result[0]) / 60 / 60 / 24 >= 2">s</ng-container> ago
+								day<ng-container *ngIf="_user.getPingByUser(result[0]) / 60 / 60 / 24 >= 2">s</ng-container> ago
 							</span>
 							<span
 								*ngIf="_user.getPingByUser(result[0]) / 60 / 60 / 24 < 1 && _user.getPingByUser(result[0]) / 60 / 60 / 24 >= 0.5">
@@ -96,8 +93,7 @@
 						<ng-container *ngIf="_user.getPingDetailByUser(result[0])">
 							<span *ngIf="_user.getPingByUser(result[0]) / 60 / 60 / 24 >= 1">
 								{{ math.floor(_user.getPingByUser(result[0]) / 60 / 60 / 24) | number: '1.0-0' }}
-								day<ng-container
-									*ngIf="_user.getPingByUser(result[0]) / 60 / 60 / 24 >= 2">s</ng-container>
+								day<ng-container *ngIf="_user.getPingByUser(result[0]) / 60 / 60 / 24 >= 2">s</ng-container>
 								<ng-container
 									*ngIf="_user.getPingByUser(result[0]) / 60 / 60 / 24 >= 1 && _user.getPingByUser(result[0]) / 60 / 60 % 24 >= 1">,</ng-container>
 							</span>
@@ -111,8 +107,7 @@
 							<span
 								*ngIf="_user.getPingByUser(result[0]) / 60 % 60 >= 1 && _user.getPingByUser(result[0]) / 60 / 60 / 24 < 1">
 								{{ math.floor(_user.getPingByUser(result[0]) / 60) % 60 | number: '1.0-0' }}
-								minute<ng-container
-									*ngIf="_user.getPingByUser(result[0]) / 60 % 60 >= 2">s</ng-container>
+								minute<ng-container *ngIf="_user.getPingByUser(result[0]) / 60 % 60 >= 2">s</ng-container>
 							</span>
 							ago
 						</ng-container>
@@ -140,14 +135,12 @@
 								<td>{{ record.casino }}</td>
 								<td>
 									{{ record.type }}
-									<span class="recordNote" *ngIf="record.note.length > 0"
-										[innerHtml]="record.note"></span>
+									<span class="recordNote" *ngIf="record.note.length > 0" [innerHtml]="record.note"></span>
 								</td>
 								<td class="d-none d-md-table-cell text-center">€{{ record.deposit }}</td>
 								<td class="d-none d-md-table-cell text-center">€{{ record.withdrawal }}</td>
 								<td class="text-center fw-bold">
-									<span
-										[ngClass]="(record.withdrawal - record.deposit) >= 0 ? 'text-success' : 'text-danger'">
+									<span [ngClass]="(record.withdrawal - record.deposit) >= 0 ? 'text-success' : 'text-danger'">
 										€{{ record.withdrawal - record.deposit | number:'1.0-2' }}
 									</span>
 								</td>
