--- a/src/app/page/general/patch-notes/patch-notes.component.html
+++ b/src/app/page/general/patch-notes/patch-notes.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12">
-        <div class="content-item mb-3">
+        <div class="content-item">
             <h3>Patch Notes</h3>
             <p class="">
                 <span class="me-2">
