--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,14 +1,12 @@
 <div class="row" *ngIf="_result.userStatsToday != undefined">
 	<div class="col-12 col-lg-6">
-		<div class="content-item mb-3">
+		<div class="content-item">
 			<div class="row">
 				<div class="col-12">
 					<h3 class="mb-0">
 						Hello, {{ user }}
-						<fa-icon [icon]="iconUp" class="text-success fs-5"
-							*ngIf="_result.userStatsToday.total > 0"></fa-icon>
-						<fa-icon [icon]="iconDown" class="text-danger fs-5"
-							*ngIf="_result.userStatsToday.total < 0"></fa-icon>
+						<fa-icon [icon]="iconUp" class="text-success fs-5" *ngIf="_result.userStatsToday.total > 0"></fa-icon>
+						<fa-icon [icon]="iconDown" class="text-danger fs-5" *ngIf="_result.userStatsToday.total < 0"></fa-icon>
 					</h3>
 				</div>
 
@@ -44,14 +42,12 @@
 									<td>{{ record.casino }}</td>
 									<td>
 										{{ record.type }}
-										<span class="recordNote" *ngIf="record.note.length > 0"
-											[innerHtml]="record.note"></span>
+										<span class="recordNote" *ngIf="record.note.length > 0" [innerHtml]="record.note"></span>
 									</td>
 									<td class="d-none d-sm-table-cell text-center">€{{ record.deposit }}</td>
 									<td class="d-none d-sm-table-cell text-center">€{{ record.withdrawal }}</td>
 									<td class="text-center">
-										<span
-											[ngClass]="(record.withdrawal - record.deposit) >= 0 ? 'text-success' : 'text-danger'">
+										<span [ngClass]="(record.withdrawal - record.deposit) >= 0 ? 'text-success' : 'text-danger'">
 											€{{ record.withdrawal - record.deposit | number:'1.0-2' }}
 										</span>
 									</td>
@@ -63,7 +59,7 @@
 			</div>
 		</div>
 
-		<div class="content-item mb-3" *ngIf="_result.playedToday.length != 0">
+		<div class="content-item" *ngIf="_result.playedToday.length != 0">
 			<div class="row">
 				<div class="col-12">
 					<h3>
@@ -104,7 +100,7 @@
 	</div>
 
 	<div class="col-12 col-lg-6">
-		<div class="content-item mb-3" *ngFor="let period of _result.availablePeriods">
+		<div class="content-item" *ngFor="let period of _result.availablePeriods">
 			<h3 class="mb-0">{{ period | titlecase }}</h3>
 			<!-- <hr> -->
 			<p *ngIf="_result.getPeriodStats(period).length == 0" class="fst-italic mb-0">
