--- a/src/app/page/record/record-manage/record-manage.component.html
+++ b/src/app/page/record/record-manage/record-manage.component.html
@@ -56,7 +56,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr *ngFor="let record of records">
+					<tr *ngFor="let record of records.slice(0, amountOfRecords)">
 						<td>{{ record.date | date:"dd-MM" }}</td>
 						<td>{{ record.casino }}</td>
 						<td>
@@ -80,6 +80,14 @@
 					</tr>
 				</tbody>
 			</table>
+		</div>
+
+		<div class="col-12" *ngIf="amountOfRecords < records.length">
+			<div class="d-flex justify-content-center">
+				<button class="btn btn-outline-primary btn-sm mt-2" (click)="amountOfRecords = amountOfRecords + 50">
+					Show more
+				</button>
+			</div>
 		</div>
 	</div>
 </div>
