--- a/src/app/page/user/user-profile/user-profile.component.html
+++ b/src/app/page/user/user-profile/user-profile.component.html
@@ -1,193 +1,209 @@
-<div class="content-item"
+<ng-container
 	*ngIf="_profile.statsLoaded && _profile.getUserData(userId) != undefined && _profile.getUserData(userId).visibleStats != undefined && _profile.getUserData(userId).visibleStats.total != undefined">
-	<h3 class="mb-1 d-inline-block">{{ _profile.getUserData(userId).name }}</h3>
-	<button (click)="toggleChart()" class="btn btn-outline-primary btn-sm d-inline-block float-end">
-		<fa-icon [icon]="iconChart" class="me-1"></fa-icon>
-		<span *ngIf="showChart">Stop</span>
-		<span *ngIf="!showChart">Start</span>
-		chart mode
-	</button>
+	<div class="content-item" *ngIf="!showChart">
+		<h3 class="mb-1 d-inline-block">{{ _profile.getUserData(userId).name }}</h3>
 
-	<!-- Periodic and casino stats -->
-	<div *ngIf="!showChart">
-		<div class="d-none d-lg-flex flex-row">
-			<div class="me-3"
-				*ngFor="let _ of [].constructor(math.ceil(_profile.getUserData(userId).yearResults.length / 6)); let i=index;">
-				<h5><span *ngIf="i == 0">Year</span>&nbsp;</h5>
-				<div *ngFor="let result of _profile.getUserData(userId).yearResults">
-					<app-label-result [label]="result.period_indicator_abstract" [result]="result.net"></app-label-result>
+		<!-- Periodic and casino stats -->
+		<div>
+			<div class="d-none d-lg-flex flex-row">
+				<div class="me-3"
+					*ngFor="let _ of [].constructor(math.ceil(_profile.getUserData(userId).yearResults.length / 6)); let i=index;">
+					<h5><span *ngIf="i == 0">Year</span>&nbsp;</h5>
+					<div *ngFor="let result of _profile.getUserData(userId).yearResults">
+						<app-label-result [label]="result.period_indicator_abstract" [result]="result.net"></app-label-result>
+					</div>
 				</div>
-			</div>
 
-			<div class="me-3"
-				*ngFor="let _ of [].constructor(math.ceil(_profile.getUserData(userId).monthResults.length / 6)); let i=index;">
-				<h5><span *ngIf="i == 0">Month</span>&nbsp;</h5>
+				<div class="me-3"
+					*ngFor="let _ of [].constructor(math.ceil(_profile.getUserData(userId).monthResults.length / 6)); let i=index;">
+					<h5><span *ngIf="i == 0">Month</span>&nbsp;</h5>
 
-				<div *ngFor="let result of _profile.getUserData(userId).monthResults.slice(i*6, i*6+6)">
-					<app-label-result
-						label="'{{ result.period_indicator_abstract }} {{ getMonthName(result.period_indicator_detail) }}"
-						[result]="result.net"></app-label-result>
+					<div *ngFor="let result of _profile.getUserData(userId).monthResults.slice(i*6, i*6+6)">
+						<app-label-result
+							label="'{{ result.period_indicator_abstract }} {{ getMonthName(result.period_indicator_detail) }}"
+							[result]="result.net"></app-label-result>
+					</div>
 				</div>
-			</div>
 
-			<div class="me-3 d-none d-xxl-block"
-				*ngFor="let _ of [].constructor(math.ceil(_profile.getUserData(userId).casinoResults.length / 6)); let i=index;">
-				<h5><span *ngIf="i == 0">Casino</span>&nbsp;</h5>
-				<div *ngFor="let result of _profile.getUserData(userId).casinoResults.slice(i*6, i*6+6)">
-					<app-label-result [label]="result.key" [result]="result.value"></app-label-result>
+				<div class="me-3 d-none d-xxl-block"
+					*ngFor="let _ of [].constructor(math.ceil(_profile.getUserData(userId).casinoResults.length / 6)); let i=index;">
+					<h5><span *ngIf="i == 0">Casino</span>&nbsp;</h5>
+					<div *ngFor="let result of _profile.getUserData(userId).casinoResults.slice(i*6, i*6+6)">
+						<app-label-result [label]="result.key" [result]="result.value"></app-label-result>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<hr class="d-none d-lg-block opacity-25" *ngIf="!showChart">
-
-	<!-- Shown records generic stats -->
-	<div class="row">
-		<div class="col-12">
-			<div class="d-inline-block me-3">
-				<span>
-					{{ _profile.getUserData(userId).visibleStats.total_records }} records |
-					deposit €{{ _profile.getUserData(userId).visibleStats.deposit | number:'1.0-2'}} |
-					withdrawal €{{ _profile.getUserData(userId).visibleStats.withdrawal | number:'1.0-2' }} |
-					net €{{ _profile.getUserData(userId).visibleStats.total | number:'1.0-2' }}
-				</span>
-			</div>
-
-			<div class="d-none d-lg-block float-xxl-end">
-				<ng-container *ngFor="let connection of _profile.usersData">
-					<h6 class="d-inline-block me-4" role="button" routerLink="/profile/{{connection.id}}">
-						<fa-icon [icon]="iconCarotRight" *ngIf="connection.id === userId" class="text-warning"></fa-icon>
-						{{ connection.name }}
-						<span [ngClass]="{'text-success' : connection.visibleStats.total > 0,
-														  'text-danger' : connection.visibleStats.total < 0}">
-							€{{ connection.visibleStats.total | number:'1.0-2' }}
-						</span>
-					</h6>
-				</ng-container>
-			</div>
-		</div>
-
+	<!-- <hr class="d-none d-lg-block opacity-25" *ngIf="!showChart"> -->
+	<div class="content-item">
+		<!-- Shown records generic stats -->
 		<div class="row">
-			<!-- Record filters -->
-			<div class="d-none d-xl-block col-4">
-				<div class="row">
-					<div class="col-6">
-						<h5>
-							Types
-							<fa-icon class="fs-6" [icon]="iconReverse" role="button" class="reverse-button fs-6"
-								(click)="_record.toggleTypeInverse(); _profile.updateFilters(); updateChart();" [ngClass]="{
+			<div class="col-12">
+				<div class="d-inline-block me-3">
+					<span>
+						{{ _profile.getUserData(userId).visibleStats.total_records }} records |
+						deposit €{{ _profile.getUserData(userId).visibleStats.deposit | number:'1.0-2'}} |
+						withdrawal €{{ _profile.getUserData(userId).visibleStats.withdrawal | number:'1.0-2' }} |
+						net €{{ _profile.getUserData(userId).visibleStats.total | number:'1.0-2' }}
+					</span>
+				</div>
+
+				<button (click)="toggleChart()" class="btn btn-outline-primary btn-sm d-inline-block float-end">
+					<fa-icon [icon]="iconChart" class="me-1"></fa-icon>
+					<span *ngIf="showChart">Stop</span>
+					<span *ngIf="!showChart">Start</span>
+					chart mode
+				</button>
+
+				<div class="d-none d-lg-block float-xxl-end">
+					<ng-container *ngFor="let connection of _profile.usersData">
+						<h6 class="d-inline-block me-4" role="button" routerLink="/profile/{{connection.id}}">
+							<fa-icon [icon]="iconCarotRight" *ngIf="connection.id === userId" class="text-warning"></fa-icon>
+							{{ connection.name }}
+							<span [ngClass]="{'text-success' : connection.visibleStats.total > 0,
+														  'text-danger' : connection.visibleStats.total < 0}">
+								€{{ connection.visibleStats.total | number:'1.0-2' }}
+							</span>
+						</h6>
+					</ng-container>
+				</div>
+
+			</div>
+
+			<div class="row">
+				<!-- Record filters -->
+				<div class="d-none d-xl-block col-4">
+					<div class="row">
+						<div class="col-6">
+							<h5>
+								Types
+								<fa-icon class="fs-6" [icon]="iconReverse" role="button" class="reverse-button fs-6"
+									(click)="_record.toggleTypeInverse(); _profile.updateFilters(); updateChart();" [ngClass]="{
 													'dark': _localstorage.isDarkmode(),
 													'light': !_localstorage.isDarkmode(),
 													'active': _record.inverseFilterRecordType
 													}"></fa-icon>
-						</h5>
-						<span *ngFor="let type of recordTypes" class="filter-item mb-1 d-inline-block" role="button" [ngClass]="{
+							</h5>
+							<span *ngFor="let type of recordTypes" class="filter-item mb-1 d-inline-block" role="button" [ngClass]="{
 																				'dark': _localstorage.isDarkmode(),
 																				'light': !_localstorage.isDarkmode(),
 																				'active': hasValue(_record.filterRecordType, type.value)}"
-							(click)="_record.addOrRemoveFilterRecordType(type.value); _profile.updateFilters(); updateChart();">
-							{{ type.value }}
-						</span>
-					</div>
-					<div class="col-6">
-						<h5>
-							Casinos
-							<fa-icon class="fs-6" [icon]="iconReverse" role="button" class="reverse-button fs-6"
-								(click)="_record.toggleCasinoInverse(); _profile.updateFilters(); updateChart();" [ngClass]="{
+								(click)="_record.addOrRemoveFilterRecordType(type.value); _profile.updateFilters(); updateChart();">
+								{{ type.value }}
+							</span>
+						</div>
+						<div class="col-6">
+							<h5>
+								Casinos
+								<fa-icon class="fs-6" [icon]="iconReverse" role="button" class="reverse-button fs-6"
+									(click)="_record.toggleCasinoInverse(); _profile.updateFilters(); updateChart();" [ngClass]="{
 																												'dark': _localstorage.isDarkmode(),
 																												'light': !_localstorage.isDarkmode(),
 																												'active': _record.inverseFilterCasino
 																												}"></fa-icon>
-						</h5>
-						<div class="row">
-							<div class="col-6 ps-0 pe-1">
-								<span *ngFor="let casino of casinos.slice(0, math.ceil(casinos.length / 2))"
-									class="filter-item mb-1 d-inline-block casino" role="button" [ngClass]="{
+							</h5>
+							<div class="row">
+								<div class="col-6 ps-0 pe-1">
+									<span *ngFor="let casino of casinos.slice(0, math.ceil(casinos.length / 2))"
+										class="filter-item mb-1 d-inline-block casino" role="button" [ngClass]="{
 																												'dark': _localstorage.isDarkmode(),
 																												'light': !_localstorage.isDarkmode(),
 																												'active': hasValue(_record.filterCasino, casino.value)}"
-									(click)="_record.addOrRemoveFilterCasino(casino.value); _profile.updateFilters(); updateChart();">
-									{{ casino.value }}
-								</span>
-							</div>
-							<div class="col-6 ps-1 pe-0">
-								<span *ngFor="let casino of casinos.slice(math.ceil(casinos.length / 2), casinos.length)"
-									class="filter-item mb-1 d-inline-block casino" role="button" [ngClass]="{
+										(click)="_record.addOrRemoveFilterCasino(casino.value); _profile.updateFilters(); updateChart();">
+										{{ casino.value }}
+									</span>
+								</div>
+								<div class="col-6 ps-1 pe-0">
+									<span *ngFor="let casino of casinos.slice(math.ceil(casinos.length / 2), casinos.length)"
+										class="filter-item mb-1 d-inline-block casino" role="button" [ngClass]="{
 																																'dark': _localstorage.isDarkmode(),
 																																'light': !_localstorage.isDarkmode(),
 																																'active': hasValue(_record.filterCasino, casino.value)}"
-									(click)="_record.addOrRemoveFilterCasino(casino.value); _profile.updateFilters(); updateChart();">
-									{{ casino.value }}
-								</span>
+										(click)="_record.addOrRemoveFilterCasino(casino.value); _profile.updateFilters(); updateChart();">
+										{{ casino.value }}
+									</span>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-12 mb-3">
-						<h5>Note</h5>
-						<app-text-input [formControl]="noteInput" [maxLength]="100"></app-text-input>
+						<div class="col-12 mb-3">
+							<h5>Note</h5>
+							<app-text-input [formControl]="noteInput" [maxLength]="100"></app-text-input>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<!-- Timeline chart -->
-			<div class="d-none d-xl-block col-8" id="timeline" *ngIf="showChart">
-				<apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [xaxis]="chartOptions.xaxis"
-					[title]="chartOptions.title"></apx-chart>
-			</div>
-
-			<!-- Listing of records -->
-			<div class="col-12" [ngClass]="showChart ? 'col-xl-12' : 'col-xl-8'">
-				<div class="d-none d-lg-block mb-1 text-end">
-					<button class="btn btn-outline-primary btn-sm d-inline-block me-1"
-						[ngClass]="amountOfRecords == 10 ? 'active' : ''" (click)="amountOfRecords = 10">
-						Show last 10 records
-					</button>
-
-					<button class="btn btn-outline-primary btn-sm d-inline-block"
-						[ngClass]="amountOfRecords != 10 ? 'active' : ''" (click)="amountOfRecords = 999999999">
-						Show all records
-					</button>
+				<!-- Timeline chart -->
+				<div class="d-none d-xl-block col-8" id="timeline" *ngIf="showChart">
+					<apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [xaxis]="chartOptions.xaxis"
+						[title]="chartOptions.title"></apx-chart>
 				</div>
 
-				<!-- user records table -->
-				<div class="table-border">
-					<table class="table table-hover">
-						<thead>
-							<tr>
-								<th scope="col">Date</th>
-								<th scope="col">Casino</th>
-								<th scope="col">Type</th>
-								<th class="d-none d-md-table-cell text-center" scope="col">Deposit</th>
-								<th class="d-none d-md-table-cell text-center" scope="col">Withdrawal</th>
-								<th class="text-center" scope="col">Win / Lose</th>
-								<th class="p-0" scope="col"></th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr
-								*ngFor="let record of _profile.getUserData(userId).visibleStats.records.slice().reverse().slice(0, amountOfRecords)">
-								<td>{{ record.date | date:"dd-MM" }}</td>
-								<td>{{ record.casino }}</td>
-								<td>
-									{{ record.type }}
-									<span class="recordNote" *ngIf="record.note.length > 0" [innerHtml]="record.note"></span>
-								</td>
-								<td class="d-none d-md-table-cell text-center">€{{ record.deposit }}</td>
-								<td class="d-none d-md-table-cell text-center">€{{ record.withdrawal }}</td>
-								<td class="text-center fw-bold">
-									<span [ngClass]="(record.withdrawal - record.deposit) >= 0 ? 'text-success' : 'text-danger'">
-										€{{ record.withdrawal - record.deposit | number:'1.0-2' }}
-									</span>
-								</td>
-								<td>
-									&nbsp;<fa-icon *ngIf="record.note.length > 0" [icon]="iconNote"></fa-icon>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+				<!-- Listing of records -->
+				<div class="col-12" [ngClass]="showChart ? 'col-xl-12' : 'col-xl-8'">
+					<div class="d-none d-lg-block mb-1 text-center">
+
+					</div>
+
+					<!-- user records table -->
+					<div class="table-border">
+						<table class="table table-hover">
+							<thead>
+								<tr>
+									<th scope="col">Date</th>
+									<th scope="col">Casino</th>
+									<th scope="col">Type</th>
+									<th class="d-none d-md-table-cell text-center" scope="col">Deposit</th>
+									<th class="d-none d-md-table-cell text-center" scope="col">Withdrawal</th>
+									<th class="text-center" scope="col">Win / Lose</th>
+									<th class="p-0" scope="col"></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr
+									*ngFor="let record of _profile.getUserData(userId).visibleStats.records.slice().reverse().slice(0, amountOfRecords)">
+									<td>{{ record.date | date:"dd-MM" }}</td>
+									<td>{{ record.casino }}</td>
+									<td>
+										{{ record.type }}
+										<span class="recordNote" *ngIf="record.note.length > 0" [innerHtml]="record.note"></span>
+									</td>
+									<td class="d-none d-md-table-cell text-center">€{{ record.deposit }}</td>
+									<td class="d-none d-md-table-cell text-center">€{{ record.withdrawal }}</td>
+									<td class="text-center fw-bold">
+										<span [ngClass]="(record.withdrawal - record.deposit) >= 0 ? 'text-success' : 'text-danger'">
+											€{{ record.withdrawal - record.deposit | number:'1.0-2' }}
+										</span>
+									</td>
+									<td>
+										&nbsp;<fa-icon *ngIf="record.note.length > 0" [icon]="iconNote"></fa-icon>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+
+					<!-- Show more records -->
+					<div class="d-none d-lg-block text-center mt-2">
+						<button class="btn btn-outline-warning btn-sm d-inline-block"
+							[ngClass]="amountOfRecords == 10 ? 'active' : ''" (click)="amountOfRecords = 10"
+							*ngIf="amountOfRecords != 10">
+							Show only 10 records
+						</button>
+						<ng-container *ngIf="amountOfRecords < _profile.getUserData(userId).visibleStats.records.length">
+							<button class="btn btn-outline-primary btn-sm d-inline-block ms-2"
+								(click)="amountOfRecords = amountOfRecords + 50">
+								Show 50 more
+							</button>
+							<button class="btn btn-outline-primary btn-sm d-inline-block ms-2"
+								[ngClass]="amountOfRecords == 999999999 ? 'active' : ''" (click)="amountOfRecords = 999999999">
+								Show all records
+							</button>
+						</ng-container>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</ng-container>
