--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,12 +140,16 @@ tr {
 	white-space: nowrap;
 }
 
+.fs-big {
+	font-size: 1.1rem;
+}
+
 .content {
 	width: 95%;
 	margin: auto;
 
 	.content-item {
-		padding: 20px;
+		padding: 1rem;
 		background-color: rgb(248, 249, 250);
 		border-radius: 5px;
 		margin-bottom: 1rem;
