--- a/src/app/page/record/record-create/record-create.component.html
+++ b/src/app/page/record/record-create/record-create.component.html
@@ -16,12 +16,12 @@
 			</div>
 
 			<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-				<app-select-input label="Casino" [options]="casinos" placeholder="Select casino"
+				<app-select-input label="Casino" [options]="_general.casinos" placeholder="Select casino"
 					formControlName="casino"></app-select-input>
 			</div>
 
 			<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-				<app-select-input label="Type" [options]="recordTypes" placeholder="Select type"
+				<app-select-input label="Type" [options]="_general.recordTypes" placeholder="Select type"
 					formControlName="recordType"></app-select-input>
 			</div>
 
