--- a/src/app/page/record/record-manage/record-manage.component.html
+++ b/src/app/page/record/record-manage/record-manage.component.html
@@ -9,17 +9,18 @@
 		<form [formGroup]="form">
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-					<app-select-input label="Casino" [options]="casinos" placeholder="Select casino"
+					<app-select-input label="Casino" [options]="_general.casinos" placeholder="Select casino"
 						formControlName="casino"></app-select-input>
 				</div>
 
 				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-					<app-select-input label="Type" [options]="recordTypes" placeholder="Select type"
+					<app-select-input label="Type" [options]="_general.recordTypes" placeholder="Select type"
 						formControlName="recordType"></app-select-input>
 				</div>
 
 				<div class="col-12 col-sm-6 col-lg-2">
-					<app-number-input label="Deposit" step="0.01" placeholder="0.00" formControlName="deposit"></app-number-input>
+					<app-number-input label="Deposit" step="0.01" placeholder="0.00"
+						formControlName="deposit"></app-number-input>
 				</div>
 
 				<div class="col-12 col-sm-6 col-lg-2">
@@ -39,7 +40,7 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="records != undefined">
 	<div class="col-12 content-item">
 		<div class="table-border">
 			<table class="table table-hover">
@@ -65,7 +66,8 @@
 						<td class="d-none d-md-table-cell text-center">€{{ record.deposit }}</td>
 						<td class="d-none d-md-table-cell text-center">€{{ record.withdrawal }}</td>
 						<td class="text-center fw-bold">
-							<span [ngClass]="(record.withdrawal - record.deposit) >= 0 ? 'text-success' : 'text-danger'">
+							<span
+								[ngClass]="(record.withdrawal - record.deposit) >= 0 ? 'text-success' : 'text-danger'">
 								€{{ record.withdrawal - record.deposit | number:'1.0-2' }}
 							</span>
 						</td>
