--- a/src/app/form-input/password-input/password-input.component.html
+++ b/src/app/form-input/password-input/password-input.component.html
@@ -2,6 +2,6 @@
 	<label *ngIf="label.length > 0" [for]="label">
 		{{ label }}
 	</label>
-	<input type="text" [(ngModel)]="input" (ngModelChange)="onModelChange($event)" [placeholder]="placeholder"
+	<input type="password" [(ngModel)]="input" (ngModelChange)="onModelChange($event)" [placeholder]="placeholder"
 		[id]="label" #textInput="ngModel" class="form-control" maxlength="{{ maxLength }}" />
 </div>
